--- a/package.json
+++ b/package.json
@@ -7,25 +7,20 @@
   "license": "MIT",
   "browser": "browser.js",
   "module": "index.mjs",
-  "bin": {
-    "abacus": "cli.js"
-  },
   "files": [
-    "browser.development.js",
-    "browser.development.js.map",
+    "browser.dev.js",
+    "browser.dev.js.map",
     "browser.js",
-    "cli.js",
     "index.js",
     "index.js.map",
     "index.mjs",
     "index.mjs.map"
   ],
   "scripts": {
-    "build": "yarn run build:browser && yarn run build:cli && yarn run build:node",
+    "build": "yarn run build:browser && yarn run build:node",
     "build:browser": "yarn run build:browser:min && yarn run build:browser:dev",
     "build:browser:dev": "NODE_ENV=browserdev rollup --config --silent",
     "build:browser:min": "NODE_ENV=browsermin rollup --config --silent",
-    "build:cli": "NODE_ENV=cli rollup --config --silent",
     "build:node": "rollup --config --silent",
     "dev": "NODE_ENV=browserdev rollup --config --watch",
     "prepublishOnly": "yarn test && yarn run build",
