--- a/package.json
+++ b/package.json
@@ -24,22 +24,50 @@
     "build:node": "rollup --config --silent",
     "dev": "NODE_ENV=browserdev rollup --config --watch",
     "prepublishOnly": "yarn test && yarn run build",
-    "pretest:tape": "yarn run build:node",
-    "test": "yarn run test:js && yarn run test:tape",
-    "test:js": "eslint *.js src/*.js --cache --ignore-path .gitignore --quiet",
-    "test:tape": "node test"
+    "lint": "eslint src/ test/",
+    "test": "NODE_ENV=test jest --verbose",
+    "test:watch": "NODE_ENV=test jest --verbose --watch"
   },
   "engines": {
     "node": ">=8.0.0"
+  },
+  "jest": {
+    "modulePaths": [
+      "<rootDir>/src",
+      "<rootDir>/node_modules"
+    ],
+    "globals": {
+      "NODE_ENV": "test"
+    },
+    "verbose": true,
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.jsx?$"
+  },
+  "ava": {
+    "require": [
+      "esm",
+      "@babel/polyfill",
+      "@babel/register"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-named-capturing-groups-regex": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
+    "ava": "^1.4.1",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
+    "babel-plugin-transform-modern-regexp": "^0.0.6",
     "eslint": "^5.16.0",
+    "jest": "^24.8.0",
+    "jest-cli": "^24.8.0",
     "rollup": "^1.11.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
