--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "dev": "NODE_ENV=browserdev rollup --config --watch",
     "prepublishOnly": "yarn test && yarn run build",
     "lint": "eslint src/ test/",
-    "test": "NODE_ENV=test jest --verbose",
-    "test:watch": "NODE_ENV=test jest --verbose --watch"
+    "test": "NODE_ENV=test npx ava",
+    "test:watch": "NODE_ENV=test npx ava --watch"
   },
   "engines": {
     "node": ">=8.0.0"
@@ -62,6 +62,7 @@
     "babel-jest": "^24.8.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
     "babel-plugin-transform-modern-regexp": "^0.0.6",
