--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "babel-plugin-transform-for-of-as-array": "^1.1.1",
     "babel-plugin-transform-modern-regexp": "^0.0.6",
     "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "rollup": "^1.11.3",
