--- a/package.json
+++ b/package.json
@@ -54,13 +54,12 @@
     "@babel/core": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "@babel/plugin-transform-named-capturing-groups-regex": "^7.4.4",
+    "@babel/plugin-transform-named-capturing-groups-regex": "^7.4.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/register": "^7.4.4",
     "ava": "^1.4.1",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -69,15 +68,15 @@
     "babel-plugin-transform-modern-regexp": "^0.0.6",
     "eslint": "^5.16.0",
     "eslint-plugin-import": "^2.17.2",
-    "jest": "^24.8.0",
-    "jest-cli": "^24.8.0",
     "rollup": "^1.11.3",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-eslint": "^6.0.0",
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-terser": "^4.0.4"
   },
   "dependencies": {
+    "convert-units": "^2.3.4",
     "lodash": "^4.17.11"
   }
 }
