--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "rollup-plugin-terser": "^4.0.4"
   },
   "dependencies": {
-    "convert-units": "^2.3.4"
+    "convert-units": "^2.3.4",
+    "mathjs": "^5.10.3"
   }
 }
