--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   },
   "dependencies": {
     "convert-units": "^2.3.4",
-    "mathjs": "^5.10.3"
+    "mathjs": "^5.10.3",
+    "ulid": "^2.3.0"
   }
 }
